# wikiguesser

./: .env  .env_amazon  .gitattributes  .gitignore  Makefile  README.md  README.txt  aws_commands  ideas.txt  make.sh
backend/: .gitattributes  Cargo.toml  test_backend.sh
backend/benchmark/: Cargo.toml  run_benchmark.sh
backend/benchmark/src/: main.rs
backend/data/: Lexique383.csv  frwiki_trained.fifu  list_common.txt  result_10000  result_500  wiki_new_model_fr.fifu
backend/src/: main.rs  schema.rs
backend/src/handlers/: articles.rs  games.rs  mod.rs  ratings.rs  reports.rs  users.rs  utils.rs  words.rs
backend/src/models/: articles.rs  categories.rs  completed_page.rs  games.rs  mod.rs  ratings.rs  reports.rs  users.rs  words.rs
common/: Cargo.toml
common/src/: models.rs  schema.rs
conf_amazon/: apache_default.conf  apache_http.conf  aws_commands  aws_commands.sh  launch_server.sh
docker/: Dockerfile.actix  Dockerfile.yew  docker_populate.yaml  docker_web.yaml
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  main.rs  similar_word.rs
frontend/src/components/: app.rs  challenge_page.rs  guessing_page.rs  hidden_field.rs  information_page.rs  launch_page.rs  launch_page_old.rs  loading_bar.rs  login.rs  mod.rs  past_words.rs  preparation_page.rs  random_page.rs  rating.rs  report_page.rs  roadmap_page.rs  signup.rs  timer.rs
frontend/src/entities/: hidden_text.rs  interfaces.rs  mod.rs
frontend/src/service/: articles.rs  fetch.rs  future.rs  games.rs  mod.rs  ratings.rs  reports.rs  users.rs  words.rs
frontend/src/utils/: hamming.rs  hashing.rs  mod.rs  page.rs  reveal_strength.rs  similar_word.rs
utils/: startup_wg.sh
utils/daily_functions/: Cargo.toml
utils/daily_functions/src/: lib.rs
utils/wiki_process/: Cargo.toml
utils/wiki_process/src/: lib.rs
utils/word_frequency/: Cargo.toml
utils/word_frequency/src/: lib.rs
wiki_random/: Cargo.toml  Dockerfile  diesel_setup.sh  drop_database.sh  drop_db.sql  populate_database.sh  sample.json  sample_cat.csv  sample_cat.json
wiki_random/migration_files/: down.sql  up.sql
wiki_random/src/: main.rs  models.rs  op.rs  schema.rs
