[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel_full_text_search = "1.0.1"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
derive_more = "^0.99"
chrono = { version = "0.4.22", features = ["serde"]}
chrono-tz = { version = "^0.8" }
serde_json = "1.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-cors = "0.5.4"
actix-service = "1.0.1"
dotenv_codegen = "0.15.0"
finalfusion = "^0.17"
rand = "^0.8"
distance = "0.4"
uuid = { version = "1.2.2", features = ["v4"]}
wiki_process = { path = "../utils/wiki_process" }
daily_functions = { path = "../utils/daily_functions" }
