[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "^0"
log = "^0.4"
gloo = "0.8.0"
finalfusion = "0.16"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "^1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
dotenv_codegen = "0.15.0"
common = { path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.14"
