[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "^0"
log = "^0.4"
gloo = "0.8.0"
finalfusion = "0.16"
chrono = { version = "0.4.22", features = ["serde"]}
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "^1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4.5"
dotenv_codegen = "0.15.0"
regex = "1"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
gloo-dialogs = "0.1.1"


[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "HtmlSelectElement",
  "Response",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.14"
