[package]
name = "wiki_random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
mediawiki = "0.2.8"
futures = "0.3"
serde_json = "1.0"
r2d2 = "0.8.8"
tokio = { version = "1.21.2", features = ["full"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv_codegen = "0.15.0"
common = { path = "../common/" }
rand = "0.8.5"
